--- a/styles/main.css
+++ b/styles/main.css
@@ -7,17 +7,18 @@ CS 125H - Lab 3
  *{
      margin: 0;
      padding: 0;
+
     
  }
- html {
-    max-height: 100%;
+ html, body {
+    min-height: 100%;
  }
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     text-align: center;
     max-width: 100%;
-    margin: auto;
+    margin: 0;
     background-color:black;
     box-sizing: border-box;
     border: 3px;
@@ -38,17 +39,11 @@ a:visited {
 }
 
 header {
-    padding-bottom: 2em;
-}
-
-header h2 {
-    font-size: 110%;
-    color: whitesmoke;
-    
+    padding: 2em 2em 2em;
 }
 header img {
     width: 80%;
-    animation: fadeInAnimation ease 3s;
+    animation: fadeInAnimation ease 5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards; 
 }
@@ -61,41 +56,53 @@ header img {
     }
 }
 
-main {
-    clear: left;
-    margin: 3em;  
-}
-main article {
-    margin: 1em;
-}
-main article h2, main article p{   
-    margin: 1em;
-}
-
-main h2, main p, footer{
-    color: white;
-    font-style: italic;
-   
-}
-section, section h2, section iframe {
-    margin: 3em;
-}
-section iframe{
-    width:40em;
-    height:20em;
-}
-footer {
-    background-color: #0066b2;
+header h2 {
+    font-size: 110%;
+    color: whitesmoke;
+    padding: .25em .25em .25em;
     
 }
 
-footer p .fa-instagram, footer p .fa-google {
-    color: white;
-    padding: 20px;
+main {
+    clear: left;
+    padding:3em 3em 7em;  
+}
+
+main article, main article h2, main article p{   
+    padding: 1em 1em 1em;
+}
+
+main h2, main p, footer{
+    color: whitesmoke;
+    font-style: italic;
+   
+}
+main section {
+    padding: 1em 1em 1em;
+    position: relative;
+    overflow: hidden;
+    width: 97%;
+}
+main section h2{
+    padding: 1em 1em 1em;
+}
+main section iframe{
+    padding: 3em 3em 3em;
+    width:50%;
+    height:100%;
+}
+footer {
+    background-color: #0066b2;   
+}
+
+footer p .fa-instagram, footer p .fa-google{
+    color: whitesmoke;
+    padding: 10px;
     font-size: 100%;
     width: 5px;
     text-decoration: none;
     border-radius: 50%;
+    
 }
 
 
