--- a/styles/main.css
+++ b/styles/main.css
@@ -11,9 +11,6 @@ CS 125H - Lab 4
     
  }
  
- html  {
-     background-image: url('/images/madtech_logo.png');
- }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -53,13 +50,15 @@ p {
 }
 
 header {
-    padding: 1em;
+    padding: 1em;   
 }
+
 header img {
     max-width: 90%;
     animation: fadeInAnimation ease 5s;
     animation-iteration-count: 1;
-    animation-fill-mode: forwards; 
+    animation-fill-mode: forwards;
+    
 }
 @keyframes fadeInAnimation {
     0% {
@@ -68,6 +67,11 @@ header img {
     100% {
         opacity: 1;
     }
+}
+header h2 {
+    position: sticky;
+    top: 0;
+    padding: 1em;
 }
 
 main article {
@@ -78,9 +82,12 @@ main article {
 main article h1 {
     font-variant: small-caps;
 }
-main article p {
+main article p{
     font-style:italic;
     margin: 0 3em;
+}
+main article address {
+    margin: 1em;
 }
 main article iframe {
     display: block;
@@ -91,15 +98,17 @@ main article iframe {
     border-color: #0066b2;
 }
 main form {
-    width: 450px;
-    margin: 150px auto;
+    margin: 1em;
+    line-height: 3em;
+    padding: 1em 4em;
+    overflow: hidden;
 }
-main form input, main form textarea {
+main form input, main form textarea, main form button {
     color:whitesmoke;
     background-color: transparent;
     border: 2px solid #0066b2;
     box-shadow: inset 0 1px 5px #0066b2;
-    width: 100%;
+    width: 90%;
     padding: 1em;
     font-size: 120%;
     font-weight: 600;
@@ -109,7 +118,6 @@ main form input, main form textarea {
     outline: none;
     transition: all .3s ease;
 }
-
 main form ::placeholder {
     color: #0066b2;
 }
@@ -118,7 +126,8 @@ main form textarea {
     resize: vertical;
 }
 main form .submit {
-    width: 100%;
+    margin: .2em;
+    width: 90%;
     padding: .6250em 0;
     font-size: 137.50%;
     border-radius: 7px;
@@ -129,8 +138,30 @@ main form .submit {
     text-transform: uppercase;
     transition: all .3s ease;
 }
+main aside {
+    width: 215px;
+    float: left;
+    padding: 10px 0 20px 20px;
+    margin-left: 3em;
+}
+main aside h2 {
+    color: #0066b2;
+    font-size: 105%;
+    padding: .5em 0 .25em 0;
+}
+main aside h3 {
+    font-size: 105%;
+    padding-bottom: .25em;
+}
+main aside img {
+    border: 2px solid #0066b2;
+    height: 75;
+    width:100%;
+}
+
 footer {
-    background-color: #0066b2;   
+    background-color: #0066b2;
+    clear: both;   
 }
 footer p {
     font-size: 80%;
