--- a/styles/main.css
+++ b/styles/main.css
@@ -101,6 +101,7 @@ main form {
     line-height: 3em;
     padding: 1em 4em;
     overflow: hidden;
+    float: left;
     clear: right;
 }
 main form input, main form textarea, main form button {
@@ -143,7 +144,6 @@ main aside {
     float: left;
     padding: 10px 0 20px 20px;
     margin:1em 2em;
-    
 }
 main aside h2 {
     color: #0066b2;
