--- a/styles/main.css
+++ b/styles/main.css
@@ -17,13 +17,13 @@ body {
     text-align: center;
     margin: 1em;
     background-color:black;
-    color:whitesmoke;
+    color:white;
     border: 3px solid #0066b2; 
 }
 
 
 a:link {
-    color:whitesmoke
+    color:white;
 }
 a:visited {
     color:#0066b2;
@@ -154,7 +154,7 @@ main form {
     overflow: hidden;
 }
 main form input, main form textarea, main form button {
-    color:whitesmoke;
+    color:white;
     background-color: transparent;
     border: 2px solid #0066b2;
     box-shadow: inset 0 1px 5px #0066b2;
@@ -184,7 +184,7 @@ main form .submit {
     font-weight: 700;
     border: none;
     background-color: #0066b2;
-    color:whitesmoke;
+    color:white;
     text-transform: uppercase;
     transition: all .3s ease;
 }
@@ -197,7 +197,7 @@ footer p {
     padding: 1em 0;
 }
 footer p .fa-instagram, footer p .fa-google{
-    color: whitesmoke;
+    color: white;
     padding: 10px;
     width: 5px;
     border-radius: 50%;
